--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,23 @@ plugins {
 
 group 'org.example'
 version '0.1.0-SNAPSHOT'
+description = 'An app for connecting project managers with investors'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 javafx {
     version = "16"
-    modules = [ 'javafx.controls' ]
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    implementation 'org.openjfx:javafx-controls:16'
+    implementation 'org.openjfx:javafx-fxml:16'
+    implementation 'org.dizitart:nitrite:3.4.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
 }
 
 test {
@@ -26,4 +30,4 @@ test {
 }
 
 
-mainClassName = 'package1.Main'
+mainClassName = 'easy.invest.Main'
